k6_load_genrator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k6-workload
  namespace: workload
  labels:
    app: workload
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k6-workload
  template:
    metadata:
      labels:
        app: k6-workload
    spec:
      serviceAccountName: workload
      securityContext:
        runAsUser: 0
      containers:
        - name: workload
          image: grafana/k6
          command: ["sleep"]
          args: ["10000000"]
#          volumeMounts:
#            - name: k6-scripts
#              mountPath: /scripts
      volumes:
        - name: k6-scripts
          emptyDir: {}
      nodeSelector:
        group: workload
      tolerations:
        - key: "node-role.kubernetes.io/workload"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
#      volumes:
#        - name: server-cert
#          secret:
#            secretName: simulated-server-cert
---
