python_controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-controller
  namespace: controller
  labels:
    app: controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-controller
  template:
    metadata:
      labels:
        app: python-controller
    spec:
      serviceAccountName: retry-controller-sa
      securityContext:
        runAsUser: 0
      containers:
        - name: controller
          image: python
          command: ["sleep"]
          args: ["10000000"]
---
